<resources>
    <string name="app_name">DAM_UC3_GersonSahuma</string>
    <string name="Text_Nombre">Nombre:</string>
    <string name="Text_apellidos">Apellidos:</string>
    <string name="text_CorreoElectronico">Email:</string>
    <string name="text_Contraseña">Contraseña</string>
    <string name="text_password">Contraseña:</string>
    <string name="text_sexo">Sexo:</string>
    <string name="text_date">Fecha de nacimiento:</string>
    <string name="text_Title_01">Registrate</string>
    <string name="text_title_2">Es gratis (y lo seguirá siendo</string>
    <string name="text_title_3">¿Por qué tengo que dar esta información?</string>
    <string name="text_title_4">Es gratis (y lo seguirá siendo).</string>
    <string name="button_Registrate">Regístrate</string>
    <string name="text_title_5">Crear una página</string>
    <string name="text_title_7">para un famoso, grupo de música o empresa.</string>
    <string name="text_title_6">" para un famoso, grupo de música o empresa."</string>
    <string name="radioButtom_mujer">Femenino</string>
    <string name="radioButtom_hombre">Masculino</string>
    <string name="text_date_complete" />
    <string name="text_name_complete" />
    <string name="text_surname_complete" />
    <string name="text_email_complete" />
    <string name="text_password_complete" />
</resources>